# venv-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: dir_benchmark.rs
src/: activation.rs  app.rs  clipboard.rs  comfy_table.rs  commands.rs  config.rs  event.rs  lib.rs  main.rs  settings.rs  shell.rs  ui.rs  venv.rs  venv_search.rs
src/core/: cache.rs  mod.rs
src/dir_size/: chonk.rs  iterative.rs  mod.rs  parallel.rs  recursive.rs
src/platform/: activation.rs  clipboard.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tapes/: search_demo.tape  test.tape  venv_demo.tape  venvs_demo.tape
