[package]
name = "venv-rs"
version = "0.1.0"
description = "tui for managing python virtual environments"
authors = ["Ardnys <semresavas35@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
shellexpand = "3.1.1"
config = "0.15.11"
serde_derive = "1.0.219"
anyhow = "1.0.98"
