[package]
name = "venv-rs"
version = "0.1.0"
description = "tui for managing python virtual environments"
authors = ["Ardnys <semresavas35@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
walkdir = "2.5.0"
arboard = "3"
dirs = "6"
dunce = "1"
bincode = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.20.0"
claims = "0.8"

[[bench]]
name = "dir_benchmark"
harness = false
