[package]
name = "venv-rs"
version = "0.1.0"
description = "tui for managing python virtual environments"
authors = ["Ardnys <semresavas35@gmail.com>"]
license = "MIT"
edition = "2024"


[lib]
name = "venv_rs_lib"
path = "src/lib.rs"

[[bin]]
name = "venv-rs"
path = "src/main.rs"

# TODO: headless mode isn't ready
# [[bin]]
# name = "venv-rs-cli"
# path = "src/bin/headless.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
walkdir = "2.5"
arboard = "3"
dirs = "6"
dunce = "1"
bincode = "2"
shellexpand = "3.1"
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.21"
claims = "0.8"

[[bench]]
name = "dir_benchmark"
harness = false
